Fixed the issue where week info would overflow

--- a/style/scheduleLi.css
+++ b/style/scheduleLi.css
@@ -140,9 +140,8 @@
 }
 
 #scheduleInfos {
-	width: 100%;
-	margin-left: 2em;
-	margin-right: 1em;
+	margin-left: 1.85em;
+	margin-right: 0.7em;
 	margin-bottom: 0.4em;
 }
 
